# mctc-lib

./: .codecov.yml  .gitignore  AGENTS.md  CMakeLists.txt  README.md  docs.md  fpm.toml  index.html  meson.build  meson_options.txt  search.html
.github/workflows/: build.yml  docs.yml
app/: CMakeLists.txt  main.f90  meson.build
config/: CMakeLists.txt  install-mod.py  meson.build  template.cmake  template.pc
config/cmake/: Findjonquil.cmake  Findjsonfortran.cmake  Findtoml-f.cmake  mctc-utils.cmake
doc/: format-aims.md  format-cjson.md  format-ctfile.md  format-ein.md  format-gen.md  format-pdb.md  format-pymatgen.md  format-qchem.md  format-qcschema.md  format-tmol.md  format-vasp.md  format-xyz.md  index.md
example/: CMakeLists.txt  meson.build
include/mctc/: defs.h
interface/: check.html  collect_interface.html  get_atomic_rad.html  get_covalent_rad.html  get_identity.html  get_lattice_points.html  get_pauling_en.html  get_vdw_rad.html  new.html  read_next_token.html  read_structure.html  read_token.html  resize.html  resize~2.html  structure_reader.html  test_interface.html  write_structure.html
lists/: absint.html  files.html  modules.html  procedures.html  types.html
man/: mctc-convert.1.adoc
module/: mctc_cutoff.html  mctc_data.html  mctc_data_atomicrad.html  mctc_data_covrad.html  mctc_data_paulingen.html  mctc_data_vdwrad.html  mctc_env.html  mctc_env_accuracy.html  mctc_env_error.html  mctc_env_system.html  mctc_env_testing.html  mctc_io.html  mctc_io_codata2018.html  mctc_io_constants.html  mctc_io_convert.html  mctc_io_filetype.html  mctc_io_math.html  mctc_io_read.html  mctc_io_read_aims.html  mctc_io_read_cjson.html  mctc_io_read_ctfile.html  mctc_io_read_gaussian.html  mctc_io_read_genformat.html  mctc_io_read_json.html  mctc_io_read_pdb.html  mctc_io_read_pymatgen.html  mctc_io_read_qchem.html  mctc_io_read_qcschema.html  mctc_io_read_turbomole.html  mctc_io_read_vasp.html  mctc_io_read_xyz.html  mctc_io_resize.html  mctc_io_structure.html  mctc_io_structure_info.html  mctc_io_symbols.html  mctc_io_utils.html  mctc_io_write.html  mctc_io_write_aims.html  mctc_io_write_cjson.html  mctc_io_write_ctfile.html  (+17 more)
page/: format-aims.html  format-cjson.html  format-ctfile.html  format-ein.html  format-gen.html  format-pdb.html  format-pymatgen.html  format-qchem.html  format-qcschema.html  format-tmol.html  format-vasp.html  format-xyz.html  index.html
proc/: collect_identical.html  crossprod.html  dirname.html  eigval_3x3.html  eigvec_3x3.html  exists.html  fatal_error.html  filename.html  get_argument.html  get_arguments.html  get_cn_count_id.html  get_cn_count_string.html  get_filetype.html  get_mctc_feature.html  get_mctc_version.html  get_structure_reader.html  get_variable.html  getline.html  help.html  io2_error.html  io_error.html  is_unix.html  is_windows.html  join.html  matdet_3x3.html  matinv_3x3.html  new_dexp_ncoord.html  new_erf_dftd4_ncoord.html  new_erf_en_ncoord.html  new_erf_ncoord.html  new_exp_ncoord.html  new_ncoord.html  new_structure.html  new_testsuite.html  new_unittest.html  next_line.html  next_token.html  number_to_lcsymbol.html  number_to_symbol.html  read_aims.html  (+40 more)
program/: main.html
search/: search_database.json
sourcefile/: accuracy.f90.html  aims.f90.html  aims.f90~2.html  atomicrad.f90.html  cjson.f90.html  codata2018.f90.html  constants.f90.html  convert.f90.html  covrad.f90.html  ctfile.f90.html  ctfile.f90~2.html  cutoff.f90.html  data.f90.html  dexp.f90.html  dftd4.f90.html  en.f90.html  env.f90.html  erf.f90.html  error.f90.html  exp.f90.html  filetype.f90.html  gaussian.f90.html  gaussian.f90~2.html  genformat.f90.html  genformat.f90~2.html  info.f90.html  io.f90.html  json.f90.html  main.f90.html  math.f90.html  ncoord.f90.html  paulingen.f90.html  pdb.f90.html  pdb.f90~2.html  pymatgen.f90.html  qchem.f90.html  qchem.f90~2.html  qcschema.f90.html  read.f90.html  resize.f90.html  (+15 more)
src/: CMakeLists.txt  aims.f90  cjson.F90  ctfile.f90  cutoff.f90  filetype.f90  gaussian.f90  genformat.f90  json.F90  meson.build  ncoord.f90  pdb.f90  qcschema.F90  qcschema.f90  read.f90  system.f90  turbomole.f90  type.f90  utils.f90  version.F90  write.f90
src/mctc/: CMakeLists.txt  cutoff.f90  data.f90  env.f90  io.f90  meson.build  ncoord.f90  version.F90  (+1 more)
src/mctc/io/: CMakeLists.txt  codata2018.f90  constants.f90  convert.f90  filetype.f90  math.f90  meson.build  read.f90  resize.f90  structure.f90  symbols.f90  utils.f90  write.f90
src/mctc/io/read/: CMakeLists.txt  aims.f90  cjson.F90  ctfile.f90  gaussian.f90  genformat.f90  meson.build  pdb.f90  pymatgen.F90  qchem.f90  qcschema.F90  turbomole.f90  vasp.f90  xyz.f90
src/mctc/io/structure/: CMakeLists.txt  info.f90  meson.build
src/mctc/io/write/: CMakeLists.txt  aims.f90  cjson.f90  ctfile.f90  genformat.f90  meson.build  pdb.f90  pymatgen.f90  qchem.f90  qcschema.f90  turbomole.f90  vasp.f90  xyz.f90
subprojects/: .gitignore  jonquil.wrap
subprojects/packagefiles/json-fortran-8.2.5/: meson.build
test/: CMakeLists.txt  main.f90  meson.build  test_cutoff.f90  test_data.f90  test_math.f90  test_ncoord.f90  test_read.f90  test_read_aims.f90  test_read_cjson.f90  test_read_ctfile.f90  test_read_gaussian.f90  test_read_genformat.f90  test_read_json.f90  test_read_pdb.f90  test_read_pymatgen.f90  test_read_qchem.f90  test_read_qcschema.f90  test_read_turbomole.f90  test_read_vasp.f90  test_read_xyz.f90  test_symbols.f90  test_write.f90  test_write_aims.f90  test_write_cjson.f90  test_write_ctfile.f90  test_write_gaussian.f90  test_write_genformat.f90  test_write_pdb.f90  test_write_pymatgen.f90  test_write_qchem.f90  test_write_qcschema.f90  test_write_turbomole.f90  test_write_vasp.f90  test_write_xyz.f90  testsuite_structure.f90
tipuesearch/: tipuesearch_content.js
type/: dexp_ncoord_type.html  erf_dftd4_ncoord_type.html  erf_en_ncoord_type.html  erf_ncoord_type.html  error_type.html  exp_ncoord_type.html  ncoord_type.html  pdb_data.html  sdf_data.html  structure_info.html  structure_type.html  testsuite_type.html  token_type.html  unittest_type.html
(+25 files in other folders)
