# This file is part of mctc-lib.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

subdir('read')
subdir('structure')
subdir('write')

srcs += files(
  'codata2018.f90',
  'constants.f90',
  'convert.f90',
  'filetype.f90',
  'math.f90',
  'read.f90',
  'resize.f90',
  'structure.f90',
  'symbols.f90',
  'utils.f90',
  'write.f90',
)
