# This file is part of mctc-lib.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

srcs += files(
  'aims.f90',
  'cjson.f90',
  'ctfile.f90',
  'gaussian.f90',
  'genformat.f90',
  'pdb.f90',
  'qchem.f90',
  'qcschema.f90',
  'turbomole.f90',
  'vasp.f90',
  'xyz.f90',
)
